# Equipment_Checkout_System

./: main.py  pyproject.toml
core/: manage.py
core/Equipment_Checkout_System/: asgi.py  settings.py  urls.py  wsgi.py
